2007-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el (w3m-session-selec, w3m-session-selected): Add spec
	for dark tty.
	(w3m-session-select): Use read-key-sequence rather than read-event or
	next-command-event in order to enable it to read arrow keys in tty.

2007-07-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-make-button): Make it work.

	* w3m-ems.el (w3m-form-make-button): Work when w3m-form-use-fancy-faces
	is nil.

2007-07-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-article-function): Change the default function into
	browse-url; doc fix.
	(w3m-safe-view-this-url): Catch a signal from function which is set to
	w3m-goto-article-function, and don't run the default function if it is
	nil.

2007-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-article-function): Use defcustom; doc fix.
	(w3m-safe-view-this-url): Use functionp instead of fboundp to check the
	value of w3m-goto-article-function.

	* w3m-favicon.el, w3m-namazu.el, w3m-perldoc.el, w3m-xmas.el, w3m.el:
	Use custom-set-default instead of set-default in defcustom forms.

2007-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-help-echo): Make the function for Emacs bind
	deactivate-mark to nil.

2007-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el, w3m-form.el, w3m-lnum.el, w3m-search.el, w3m-session.el
	* w3m.el: Rename w3m-FOO-face with w3m-FOO.

2007-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Format @key{...}.

2007-06-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map, w3m-info-like-map): Bind [backtab] to
	w3m-previous-anchor.

2007-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-retrieve, w3m-w3m-retrieve, w3m-about-retrieve)
	(w3m-cid-retrieve, w3m-data-retrieve, w3m-retrieve, w3m-about-header):
	Change the term and the symbol name `no-decode' into `no-uncompress'.

2007-06-08  Naohiro Aota  <nao.aota@gmail.com>
